fixed some flexwraps

--- a/src/components/ecosystems/styles/Takeahike.scss
+++ b/src/components/ecosystems/styles/Takeahike.scss
@@ -8,6 +8,6 @@
     flex: 1;
   }
   .flexMiddle {
-    flex: 7;
+    flex: 6;
   }
 }
